sketching out objects, adding tests and linting

--- a/test/index.html
+++ b/test/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Mancala Tests</title>
-	<link rel="stylesheet" type="text/css" href="../lib/qunit-1.11.0.css">
-	<script type="text/javascript" src="../lib/qunit-1.11.0.js"></script>
+  <title>Mancala Tests</title>
+  <link rel="stylesheet" type="text/css" href="../lib/qunit-1.11.0.css">
+  <script type="text/javascript" src="../lib/qunit-1.11.0.js"></script>
+  <script type="text/javascript" src="../lib/es5-shim.min.js"></script>
+  <script type="text/javascript" src="../lib/jquery-1.9.1.min.js"></script>
+  <script type="text/javascript" src="../src/Mancala.js"></script>
+  <script type="text/javascript" src="mancala_tests.js"></script>
 </head>
 <body>
   <div id="qunit"></div>
